TEZ-4633: Set Baseline to JDK 21 and cleanup obsolete JVM configurations (#506) (Raghav Aggarwal reviewed by Laszlo Bodor)