@@ -33,7 +33,6 @@ import org.apache.hadoop.classification.InterfaceStability.Unstable;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.util.Shell;
 import org.apache.hadoop.yarn.api.records.LocalResource;
-import org.apache.tez.common.TezCommonUtils;
 import org.apache.tez.common.annotation.ConfigurationClass;
 import org.apache.tez.common.annotation.ConfigurationProperty;
 import org.apache.tez.dag.api.EdgeProperty.ConcurrentEdgeTriggerType;
@@ -400,7 +399,7 @@ public class TezConfiguration extends Configuration {
   public static final String TEZ_AM_LAUNCH_CLUSTER_DEFAULT_CMD_OPTS_DEFAULT =
       "-server -Djava.net.preferIPv4Stack=true -Dhadoop.metrics.log.level=WARN";
 
-  public static final String TEZ_AM_LAUNCH_CLUSTER_JDK17_CMD_OPTS_DEFAULT =
+  public static final String TEZ_AM_LAUNCH_CLUSTER_ADD_OPENS_DEFAULT =
       " --add-opens java.base/java.lang=ALL-UNNAMED";
   /**
    * String value. Command line options provided during the launch of the Tez
@@ -410,11 +409,8 @@ public class TezConfiguration extends Configuration {
   @ConfigurationScope(Scope.AM)
   @ConfigurationProperty
   public static final String TEZ_AM_LAUNCH_CMD_OPTS = TEZ_AM_PREFIX +  "launch.cmd-opts";
-  public static final String TEZ_AM_LAUNCH_CMD_OPTS_JDK8_DEFAULT =
-      "-XX:+PrintGCDetails -verbose:gc -XX:+PrintGCTimeStamps -XX:+UseNUMA -XX:+UseParallelGC";
-  public static final String TEZ_AM_LAUNCH_CMD_OPTS_JDK9_DEFAULT =
-      "-verbose:gc -Xlog:gc*,safepoint::time,uptime -XX:+UseNUMA -XX:+UseParallelGC";
-  public static final String TEZ_AM_LAUNCH_CMD_OPTS_DEFAULT;
+  public static final String TEZ_AM_LAUNCH_CMD_OPTS_DEFAULT =
+      "-Xlog:gc*,safepoint::time,uptime -XX:+UseNUMA -XX:+UseParallelGC";
 
   /**
    * String value. Command line options which will be prepended to {@link
@@ -438,21 +434,9 @@ public class TezConfiguration extends Configuration {
   @ConfigurationProperty
   public static final String TEZ_TASK_LAUNCH_CMD_OPTS = TEZ_TASK_PREFIX
       + "launch.cmd-opts";
-  public static final String TEZ_TASK_LAUNCH_CMD_OPTS_JDK8_DEFAULT =
-      "-XX:+PrintGCDetails -verbose:gc -XX:+PrintGCTimeStamps -XX:+UseNUMA -XX:+UseParallelGC";
-  public static final String TEZ_TASK_LAUNCH_CMD_OPTS_JDK9_DEFAULT =
-      "-verbose:gc -Xlog:gc*,safepoint::time,uptime -XX:+UseNUMA -XX:+UseParallelGC";
-  public static final String TEZ_TASK_LAUNCH_CMD_OPTS_DEFAULT;
+  public static final String TEZ_TASK_LAUNCH_CMD_OPTS_DEFAULT =
+      "-Xlog:gc*,safepoint::time,uptime -XX:+UseNUMA -XX:+UseParallelGC";
 
-  static {
-    if (TezCommonUtils.getJavaVersion() >= 9) {
-      TEZ_AM_LAUNCH_CMD_OPTS_DEFAULT = TEZ_AM_LAUNCH_CMD_OPTS_JDK9_DEFAULT;
-      TEZ_TASK_LAUNCH_CMD_OPTS_DEFAULT = TEZ_TASK_LAUNCH_CMD_OPTS_JDK9_DEFAULT;
-    } else {
-      TEZ_AM_LAUNCH_CMD_OPTS_DEFAULT = TEZ_AM_LAUNCH_CMD_OPTS_JDK8_DEFAULT;
-      TEZ_TASK_LAUNCH_CMD_OPTS_DEFAULT = TEZ_TASK_LAUNCH_CMD_OPTS_JDK8_DEFAULT;
-    }
-  }
 
   /**
    * Double value. Tez automatically determines the Xmx for the JVMs used to run
